<?xml version="1.0"?>
<package format="2">
  <name>math_utils</name>
  <version>1.0.0</version>
  <description>
    Collection of common math utility functions.
  </description>

  <maintainer email="enric.galceran@mavt.ethz.ch">Enric Galceran</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

<!--
  <depend>roscpp</depend>
  <depend>tf</depend>
-->

</package>
